--- a/Healthcare020.Mobile/Healthcare020.Mobile/Views/PreglediPage.xaml
+++ b/Healthcare020.Mobile/Healthcare020.Mobile/Views/PreglediPage.xaml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage
-    x:Class="Healthcare020.Mobile.Views.ZakazaniPreglediPage"
+    x:Class="Healthcare020.Mobile.Views.PreglediPage"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:customViews="clr-namespace:Healthcare020.Mobile.CustomViews;assembly=Healthcare020.Mobile"
@@ -31,7 +31,7 @@
                 Grid.Row="1"
                 HorizontalOptions="FillAndExpand"
                 VerticalOptions="FillAndExpand">
-                <customViews:CustomCollectionView BaseCollectionViewModel="{Binding ZakazaniPreglediVM}" />
+                <customViews:CustomListView x:Name="ListView" />
             </StackLayout>
         </Grid>
     </ContentPage.Content>
