Implemented page, model display, and everything necessary for successful display of the Medical Certificate list on the Medical Certificates page. Displays ItemFlag icons in an item template in a reusable CustomListView based on the IconFlagsStyle dynamic resource with the IsVisible Setter property that can be changed.

--- a/Healthcare020.Mobile/Healthcare020.Mobile/App.xaml
+++ b/Healthcare020.Mobile/Healthcare020.Mobile/App.xaml
@@ -15,7 +15,11 @@
                 <themes:LightTheme />
             </ResourceDictionary.MergedDictionaries>
 
-
+            <!--#region HelpVariables-->
+            <Style x:Key="FlagIconsStyle" TargetType="StackLayout">
+                <Setter Property="IsVisible" Value="True" />
+            </Style>
+            <!--#endregion-->
             <!--#region Images-->
             <OnPlatform x:Key="Logo_Revert_Medium" x:TypeArguments="ImageSource">
                 <On Platform="Android" Value="healthcare020_150x150_revert.png" />
